Redo profile alignment to fix mobile display

--- a/birdnest/static/css/custom.css
+++ b/birdnest/static/css/custom.css
@@ -7,22 +7,19 @@ html {
 }
 
 .outer {
-    display: table;
-    position: absolute;
-    height: 99%;
-    width: 99%;
+    min-height: 99%;
+    align-items: center;
+    display: flex;
+    float: right;
 }
 
 .middle {
-    display: table-cell;
-    vertical-align: middle;
     padding: 10px;
 }
 
 .inner {
     margin-left: auto;
     margin-right: auto;
-    float: right;
     background: rgba(0,0,0,0.2);
     border-radius: 5px;
 }
